fix: fix position mobile display

--- a/style.css
+++ b/style.css
@@ -905,10 +905,10 @@ h1 {
   }
 
   .mobile-horizontal-display {
-    top: 148px;
-    left: 355px;
-    width: 239px;
-    height: 129px;
+    top: 146px;
+    left: 365px;
+    width: 250px;
+    height: 143px;
   }
 
   .mobile-vertical-display {
